tests/specs/test/hooks/mixed_errors.out
Check file:///Users/ib/dev/deno/tests/specs/test/hooks/mixed_errors.ts
running 5 tests from ./mixed_errors.ts
test 1 - should pass ...
------- output -------
beforeAll executed
beforeEach executed for test 1
test 1 executed
afterEach executed for test 1
----- output end -----
test 1 - should pass ... ok ([WILDCARD])
test 2 - should pass ...
------- output -------
beforeEach executed for test 2
test 2 executed
afterEach executed for test 2
----- output end -----
test 2 - should pass ... ok ([WILDCARD])
test 3 - beforeEach fails ...
------- output -------
beforeEach executed for test 3
----- output end -----
test 3 - beforeEach fails ... FAILED ([WILDCARD])
test 4 - afterEach fails ...
------- output -------
beforeEach executed for test 4
test 4 executed
afterEach executed for test 4
----- output end -----
test 4 - afterEach fails ... FAILED ([WILDCARD])
test 5 - test itself fails ...
------- output -------
beforeEach executed for test 5
test 5 executed
afterEach executed for test 5
afterAll executed
----- output end -----
test 5 - test itself fails ... FAILED ([WILDCARD])

 ERRORS 

test 3 - beforeEach fails => ./mixed_errors.ts:47:6
error: Error: beforeEach failed for test 3
    throw new Error("beforeEach failed for test 3");
          ^
    at Object.fn (file:///Users/ib/dev/deno/tests/specs/test/hooks/mixed_errors.ts:15:11)

test 4 - afterEach fails => ./mixed_errors.ts:51:6
error: Error: afterEach failed for test 4
    throw new Error("afterEach failed for test 4");
          ^
    at Object.fn (file:///Users/ib/dev/deno/tests/specs/test/hooks/mixed_errors.ts:23:11)

test 5 - test itself fails => ./mixed_errors.ts:55:6
error: Error: test 5 failed
  throw new Error("test 5 failed");
        ^
    at file:///Users/ib/dev/deno/tests/specs/test/hooks/mixed_errors.ts:57:9)

 FAILURES 

test 3 - beforeEach fails => ./mixed_errors.ts:47:6
test 4 - afterEach fails => ./mixed_errors.ts:51:6
test 5 - test itself fails => ./mixed_errors.ts:55:6

FAILED | 2 passed | 3 failed ([WILDCARD])

error: Test failed
